# insurance-propensity-intelligence

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.streamlit/: config.toml
docs/: CASE_STUDY.md  DATA_DICTIONARY.md  DEPLOYMENT_GUIDE.md  MODEL_CARD.md  PORTFOLIO_WEBSITE_COPY.md
models/: final_propensity_model.joblib
notebooks/: 01_data_quality_and_eda.ipynb  02_feature_engineering.ipynb  03_model_training_and_evaluation.ipynb  04_model_interpretability_and_business_insights.ipynb
outputs/portfolio_assets/: asset_manifest.json
outputs/reports/: campaign_targeting_report.csv  data_quality_report.json  data_quality_report.md  eda_highlights.csv  feature_importance.csv  interpretability_report.md  metrics.json  model_comparison.csv  model_evaluation_report.md  run_manifest.json  threshold_optimization.csv  validation_decile_report.csv
outputs/submission/: submission.csv
scripts/: generate_portfolio_assets.py  run_project_pipeline.py
sql/: customer_analysis.sql  propensity_reporting.sql  segment_performance.sql
src/insurance_propensity/: __init__.py  config.py
src/insurance_propensity/data/: __init__.py  validation.py
src/insurance_propensity/evaluation/: __init__.py  metrics.py
src/insurance_propensity/features/: __init__.py  engineering.py
src/insurance_propensity/models/: __init__.py  modeling.py
src/insurance_propensity/reporting/: __init__.py  (+2 more)
streamlit_app/: app.py
streamlit_app/assets/: theme.css
tests/: test_artifacts.py  test_data_contract.py  test_feature_engineering.py
(+4 files in other folders)
